edited css, fixed bugs letter-spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ a {
     color:#2E2F42;
     font-size: 16px;
     font-weight: 500;
-    line-height: 150%;
+    line-height: 1.5;
     letter-spacing: 0.02em;
 }
 
@@ -35,7 +35,6 @@ a {
     color:  #434455;
     font-weight: 400;
     font-size: 16px;
-    height: 150%;
     letter-spacing: 0.02em;
     line-height: 1.5;
 
@@ -153,7 +152,7 @@ a {
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
-    color:#2E2F42;
+    color: #2e2f42;
     text-transform: capitalize;
 
 }
@@ -162,14 +161,16 @@ a {
     font-weight: 500;
     font-size: 20px;
     line-height: 24px;
-    letter-spacing: 2%;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
 }
 
 .team-position {
     font-weight: 400;
     font-size: 16px;
-    line-height: 24px;
+    line-height: 24;
     color: #434455;
+    letter-spacing: 0.02em;
 }
 
 .team-list {
@@ -182,7 +183,7 @@ a {
     color: #2e2f42;
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.11px;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
 
